correct git hub url

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ tiles-count: 6
 # social settings
 500px_url:
 facebook_url:
-github_url: https://tijmenvangulik.github.io/Ergometerspace/
+github_url: https://github.com/tijmenvangulik/Ergometerspace
 gitlab_url: 
 googleplus_url:
 instagram_url: 
